try again to fix the whitespace issue

--- a/main.css
+++ b/main.css
@@ -7,6 +7,11 @@
   user-select: none;
 }
 
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
 body {
   position: fixed;
   top: 0;
@@ -18,11 +23,13 @@ body {
 }
 
 #game {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 canvas {
-  touch-action: none;
   display: block;
+  width: 100%;
+  height: 100%;
+  touch-action: none;
 }
